centos-ansible-k8s-1.15.2/kubernetes-dashboard/dashboard-service-kong.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-kong
  namespace: kubernetes-dashboard
  annotations:
    configuration.konghq.com/protocol: https
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: kubernetes-dashboard
    release: kubernetes-dashboard
  type: NodePort
